ui: linux: remove special css used for the panel close buttons, no longer need in moz 1.9.1, it was causing mis-alignment to the button next to it
(integrated from komodo (trunk) change 43938 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@5111 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/bindings/scrolltabs.css
+++ b/src/chrome/komodo/skin/plat/gnome/bindings/scrolltabs.css
@@ -37,16 +37,6 @@ tab[type="file-tab"]
 .tabs-closebutton,
 .tab-close-button[selected="true"] {
   list-style-image: url("moz-icon://stock/gtk-close?size=menu");
-  -moz-appearance: none;
-  border: none !important;
-  background: inherit;
-  cursor: default;
-  /*
-    Remove the top and bottom padding, otherwise the tabs look fat (too tall).
-    Provide more space to the left of the button, otherwise the X button is
-    too jammed against the tab text.
-  */
-  padding: 0 0 0 6px;
 }
 
 .tabs-closebutton:hover,
